# bob-ka

./: .gitignore  Cargo.toml  build_n_test.sh  config.toml  example_config.toml  example_mothership_config.toml  readme.md  real_config.toml  test_config.toml
.github/workflows/: release.yml  rust.yml  test.yml
chores/: db
consumer_state/: db  snap.00000000000000CF
dashboard/: db  snap.0000000000016053
katie/: db  snap.0000000000000276
llm/: db  snap.000000000000167D
llm-reply/: db  snap.00000000000097D2
log/: db
mothership_db/: db
noah/: db  snap.0000000000000312
random/: db  snap.00000000000006EB
reminder/: db
reminder-test/: db  snap.00000000000013B9
rob/: db  snap.0000000000001542
sloan/: db  snap.0000000000000327
src/: lib.rs  main.rs
static/: dashboard.html  index.html  manifest.json  poll.html  sw.js  topics.html
test/: snap.00000000000001CF
tests/: integration_tests.rs
