[package]
name = "bob-ka"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.6"          # Axum web framework
tokio = { version = "1", features = ["full"] } # Async runtime required by Axum
hyper = "0.14"        # HTTP implementation used by Axum
tower = "0.4"         # Middleware and service abstractions
toml = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
sled = { version = "0.34", features = ["compression"]}
