[package]
name = "bob_ka"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "bob_ka"
path = "src/main.rs"

[lib]
name = "bob_ka"
path = "src/lib.rs"

[dependencies]
axum = {version = "0.8", features = ["macros"]}
tokio = { version = "1", features = ["full"] }
hyper = "1.6"
tower = "0.5"
toml = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
sled = { version = "0.34", features = ["compression"]}
reqwest = { version = "0.12", features = ["blocking", "json"] } # todo - this is only a test dep
tracing = {version = "0.1.41"}
tracing-subscriber = "0.3.19"
